--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "csv-parser": "^2.3.2",
+    "csv-writer": "^1.5.0",
     "fs": "0.0.1-security",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -15,10 +17,9 @@
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "electron": "electron ."
   },
   "eslintConfig": {
