:recycle: split in components\n linux packaging \naccounting columns

--- a/.env.electron
+++ b/.env.electron
@@ -1,2 +1,13 @@
-REACT_APP_NAME=Compta
-REACT_APP_MODE=electron
+{
+  "development": {
+    "REACT_APP_NAME": "Freelance-Compta",
+    "REACT_APP_MODE": "electron",
+    "REACT_APP_URL": "http://localhost:3000",
+    "CHROME_DEV_TOOLS": "true"
+  },
+  "production": {
+    "REACT_APP_NAME": "Freelance-Compta",
+    "REACT_APP_MODE": "electron",
+    "CHROME_DEV_TOOLS": "false"
+  }
+}
