--- a/package.json
+++ b/package.json
@@ -61,20 +61,27 @@
   },
   "main": "electron.js",
   "build": {
+    "files": [
+      "public/**"
+    ],
+    "asarUnpack": [
+      "public/**"
+    ], 
+    "directories": {
+      "buildResources": "public"
+    },
     "artifactName": "${productName}.${ext}",
     "win": {
       "publisherName": "github.com/freelance-info",
-      "target": "portable",
-      "icon": "public/favicon.ico"
+      "target": "portable"
     },
     "linux": {
       "target": "AppImage",
       "category": "Office",
-      "icon": "public/logo.png"
+      "icon": "icon.png"
     },
     "mac": {
       "target": "zip",
-      "icon": "public/favicon.ico",
       "category": "Finance"
     }
   }
