--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compta",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "./",
   "private": true,
   "author": {
@@ -29,7 +29,7 @@
     "start": "concurrently --kill-others \"BROWSER=none craco start\" \"wait-on tcp:3000 && env-cmd -r .env.electron -e development electron src/main.js\"",
     "start:web": "env-cmd -f .env.web craco start",
     "start:electron-react": "craco start",
-    "start:electron-dev": "wait-on tcp:3000 && electron src/main.js",
+    "start:electron-dev": "wait-on tcp:3000 && env-cmd -r .env.electron -e development electron src/main.js",
     "build:web": "craco build",
     "build:electron": "env-cmd -r .env.electron -e production craco build",
     "eject": "react-scripts eject",
@@ -66,7 +66,7 @@
     ],
     "asarUnpack": [
       "public/**"
-    ], 
+    ],
     "directories": {
       "buildResources": "public"
     },
