--- a/.env.electron
+++ b/.env.electron
@@ -3,11 +3,13 @@
     "REACT_APP_NAME": "Freelance-Compta",
     "REACT_APP_MODE": "electron",
     "REACT_APP_URL": "http://localhost:3000",
-    "CHROME_DEV_TOOLS": "true"
+    "CHROME_DEV_TOOLS": "true",
+    "BROWSER": "none"
   },
   "production": {
     "REACT_APP_NAME": "Freelance-Compta",
     "REACT_APP_MODE": "electron",
-    "CHROME_DEV_TOOLS": "false"
+    "CHROME_DEV_TOOLS": "false",
+    "BROWSER": "none"
   }
 }
