--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "pack": "electron-builder --dir",
     "dist:win": "electron-builder --win",
     "dist:linux": "electron-builder --linux",
-    "dist:mac": "electron-builder --mac"
+    "dist:mac": "electron-builder --mac",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": "react-app"
