--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "email": "benjamin.caure@gmail.com"
   },
   "dependencies": {
-    "@craco/craco": "^5.7.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@craco/craco": "^6.4.3",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "csv-parser": "^2.3.2",
     "csv-writer": "^1.5.0",
     "env-cmd": "^10.0.1",
     "fs": "0.0.1-security",
-    "npm-watch": "^0.6.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-scripts": "4.0.3",
+    "npm-watch": "^0.11.0",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
-    "typescript": "^3.7.5"
+    "semantic-ui-react": "^2.1.0",
+    "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "concurrently --kill-others \"env-cmd -r .env.electron -e development craco start\" \"wait-on tcp:3000 && env-cmd -r .env.electron -e development electron src/main.js\"",
